fix: shift hero SVG further up on mobile to show more map detail

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -27,8 +27,8 @@
   height: 100%;
 
   @media (max-width: $breakpoint-mobile) {
-    height: 140%;
-    margin-top: -15%;
+    height: 160%;
+    margin-top: -30%;
   }
 }
 
